<resources>
    <string name="app_name">Task Manager</string>
    <string name="action_settings">Settings</string>

    <!-- Errors Hint-->
    <string name="server_not_reachable_text">Cannot reach server, Try again later</string>
    <!-- Errors Hint-->

    <!-- preference key -->
    <string name="preference_file_key">AppPreference</string>
    <string name="key_user_token">key_user_token</string>
    <string name="key_logged_in_user">key_logged_in_user</string>
    <!-- preference key -->

    <!-- Common -->
    <string name="enter_email_error">Enter Email</string>
    <string name="enter_password_error">Enter Password</string>
    <!--  -->

    <!-- Login Fragment -->
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_confirm_password_hint">Confirm Password</string>
    <string name="login_sign_up_text">Sign Up</string>
    <string name="login_sign_up_label">Sign Up</string>
    <string name="login_forgot_password_text">Forgot Password ?</string>
    <string name="task_login_label">Login</string>
    <string name="login_email_valid_error">Enter valid email Address</string>
    <!-- -->

    <!-- Login Fragment -->
    <string name="sign_up_title">User Register</string>
    <string name="sign_up_password_not_match">Password did not match</string>
    <string name="sign_up_name_hint">Name</string>
    <string name="sign_up_enter_name_error">Enter Name</string>
    <!-- -->

    <!-- Task List Fragment -->
    <string name="search_task_hint">Search Task</string>
    <string name="task_list_label">Task List</string>
    <string name="task_list_title">Your Tasks</string>
    <string name="task_list_new_task">Add New Task</string>
    <!-- -->

    <!-- Task Add Fragment -->
    <string name="add_task_title">Add Task</string>
    <string name="add_task_label">Add Task</string>
    <string name="enter_task_description_text">Task Description</string>
    <!-- -->

</resources>